[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.16"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
base64 = "0.13"
colored = "2.0"
tempfile = "3.2.0"
wiremock = "0.5"
